src/plugins/presentation_panel/public/panel_component/_presentation_panel.scss
.embPanel {
  z-index: auto;
  flex: 1;
  display: flex;
  flex-direction: column;
  height: 100%;
  min-height: $euiSizeL + 2px; // + 2px to account for border
  position: relative;
  border: none;
  outline: $euiBorderThin;

  &-isLoading {
    // completely center the loading indicator
    justify-content: center;
    align-items: center;
  }

  // SASSTODO: The inheritence factor stemming from embeddables makes this class hard to change
  .embPanel__content {
    display: flex;
    flex: 1 1 100%;
    z-index: 1;
    min-height: 0; // Absolute must for Firefox to scroll contents
    border-radius: $euiBorderRadius;
    overflow: hidden;

    &[data-error] {
      display: none;
    }
  }

  .embPanel__content--hidden {
    display: none;
  }

  // SASSTODO: this MIGHT be fixing IE
  .embPanel__content--fullWidth {
    width: 100%;
  }
}

// HEADER

.embPanel__header {
  flex: 0 0 auto;
  display: flex;
  // ensure menu button is on the right even if the title doesn't exist
  justify-content: flex-end;
  height: $euiSizeL;
}

.embPanel__header + .embPanel__content {
  border-radius: 0;
  border-bottom-left-radius: $euiBorderRadius;
  border-bottom-right-radius: $euiBorderRadius;
}

.embPanel__title {
  @include euiTitle('xxxs');
  overflow: hidden;
  line-height: 1.5;
  flex-grow: 1;
  display: flex;
  flex-wrap: wrap;
  align-items: center;

  &:not(:empty) {
    line-height: $euiSizeL;
    padding-left: $euiSizeS;
  }

  .embPanel__titleInner {
    overflow: hidden;
    display: flex;
    align-items: center;
    padding-right: $euiSizeS;
  }

  .embPanel__titleTooltipAnchor {
    max-width: 100%;
  }

  .embPanel__titleText {
    @include euiTextTruncate;
    font-weight: $euiFontWeightBold;
  }

  .embPanel__placeholderTitleText {
    color: $euiColorMediumShade;
    font-weight: $euiFontWeightRegular;
  }
}

.embPanel--dragHandle:not(.embPanel__title) {
  flex-grow: 1;
}

.embPanel__header--floater {
  position: absolute;
  right: 0;
  top: 0;
  left: 0;
  * {
    z-index: $euiZLevel1; // apply high z-index to all children
  }
}

// OPTIONS MENU

/**
  * 1. Use opacity to make this element accessible to screen readers and keyboard.
  * 2. Show on focus to enable keyboard accessibility.
  * 3. Always show in editing mode
  */

.embPanel__optionsMenuButton {
  background-color: transparentize($euiColorLightShade, .5);
  border-bottom-right-radius: 0;
  border-top-left-radius: 0;

  &:focus {
    background-color: transparentize($euiColorLightestShade, .5);
  }
}

.embPanel__optionsMenuPopover-loading {
  width: $euiSizeS * 32;
}

.embPanel__optionsMenuPopover-notification::after {
  position: absolute;
  top: 0;
  right: 0;
  content: '•';
  transform: translate(50%, -50%);
  color: $euiColorAccent;
  font-size: $euiSizeL;
}

// EDITING MODE

.embPanel--editing {
  transition: all $euiAnimSpeedFast $euiAnimSlightResistance;
  outline: 1px dashed $euiColorMediumShade;

  .embPanel--dragHandle {
    transition: background-color $euiAnimSpeedFast $euiAnimSlightResistance;

    .embPanel--dragHandle:hover {
      background-color: transparentize($euiColorWarning, lightOrDarkTheme(.9, .7));
      cursor: move;
    }
  }
}

// LOADING and ERRORS

.embPanel__error {
  padding: $euiSizeL;

  & > * {
    max-height: 100%;
    overflow: auto;
  }
}

.embPanel__label {
  position: absolute;
  padding-left: $euiSizeS;
  z-index: $euiZLevel1;
}

.embPanel__hoverActionsAnchor {
  position: relative;
  height: 100%;

  .embPanel__hoverActionsWrapper {
    height: $euiSizeXL;
    position: absolute;
    top: 0;
    display: flex;
    justify-content: space-between;
    padding: 0 $euiSize;
    flex-wrap: nowrap;
    min-width: 100%;
    z-index: -1;
    pointer-events: none; // Prevent hover actions wrapper from blocking interactions with other panels
  }

  .embPanel__hoverActions {
    opacity: 0;
    padding: $euiSizeXS;
    display: flex;
    flex-wrap: nowrap;
    border: $euiBorderThin;

    background-color: $euiColorEmptyShade;
    height: $euiSizeXL;

    pointer-events: all; // Re-enable pointer-events for hover actions
  }

  .embPanel--dragHandle {
    cursor: move;

    img {
      pointer-events: all !important;
    }
  }

  .embPanel__descriptionTooltipAnchor {
    padding: $euiSizeXS;
  }

  &:hover .embPanel__hoverActionsWrapper,
  &:focus-within .embPanel__hoverActionsWrapper,
  .embPanel__hoverActionsWrapper--openContextMenu {
    z-index: $euiZLevel9;
    top: -$euiSizeXL;

    .embPanel__hoverActions {
      opacity: 1;
    }
  }
}

